--- a/css/confetti.css
+++ b/css/confetti.css
@@ -7,7 +7,23 @@
   z-index: -1;
 }
 
-.bingo-winner {
+/* #winner-bingo {
+  display: block;
+  width: 10%;
+  height: fit-content;
+  margin: 0 auto;
+  padding: 40px;
+  text-align: center;
+  background-color: green;
+  position: absolute;
+  top: 500px;
+  bottom: 50px;
+  left: 50px;
+  font-weight: 600;
+  font-size: 2em;
+} */
+
+.display-class {
   display: block;
   width: 10%;
   height: fit-content;
@@ -23,6 +39,29 @@
   font-size: 2em;
 }
 
-.display-class {
-  display: none;
+.display-class::before {
+  content: 'YOU GOT BINGO!!!';
+}
+
+@media all and (max-width: 844px) {
+  /* #winner-bingo {
+    display: none;
+    width: 30%;
+    font-size: 1em;
+    position: unset;
+    padding-left: 40px;
+    padding-right: 40px;
+    padding-bottom: 20px;
+    padding-top: 20px;
+  } */
+
+  .display-class {
+    width: 30%;
+    font-size: 1em;
+    position: unset;
+    padding-left: 40px;
+    padding-right: 40px;
+    padding-bottom: 20px;
+    padding-top: 20px;
+  }
 }
