--- a/css/styles.css
+++ b/css/styles.css
@@ -243,3 +243,49 @@ h1 {
   background-color: #d0d94d;
   border-radius: 50%;
 }
+
+/* Responsive Designs */
+
+@media all and (max-width: 844px) {
+  h1 {
+    font-size: 2em;
+    text-align: center;
+    margin-bottom: 2rem;
+    margin-top: 1rem;
+  }
+
+  #randomize-button {
+    width: 60%;
+    margin: 0 auto;
+    border-radius: 5px;
+    padding: 0.75rem;
+    margin-bottom: 0.75rem;
+    background-color: blue;
+    color: lightcoral;
+    font-weight: 800;
+    font-size: 1em;
+  }
+
+  .card {
+    width: 95%;
+    border: 1px black solid;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 2rem;
+  }
+
+  .cell {
+    width: 100%;
+    height: 120px;
+    border: 1px black solid;
+    text-align: center;
+    margin: 0 auto;
+    display: flex;
+    align-items: center;
+    align-content: center;
+    font-size: 0.8em;
+    text-align: center;
+    justify-content: center;
+  }
+}
