--- a/css/styles.css
+++ b/css/styles.css
@@ -171,7 +171,7 @@ h1 {
 .card {
   width: 70%;
   height: 80%;
-  border: 1px black solid;
+  border: 1px red solid;
   margin: 0 auto;
   display: flex;
   flex-direction: column;
@@ -191,7 +191,7 @@ h1 {
 }
 
 .header-row:hover {
-  background-color: green;
+  background-color: lightgreen;
   cursor: pointer;
 }
 
@@ -207,20 +207,21 @@ h1 {
   display: flex;
   flex-direction: row;
   height: 100%;
-  background-color: lightgray;
+  background-color: rgb(208, 208, 41);
   /* content: 'Hello'; */
 }
 
 .cell {
   width: 100%;
   height: 150px;
-  border: 1px black solid;
+  border: 1px red solid;
   text-align: center;
   margin: 0 auto;
   display: flex;
   align-items: center;
   align-content: center;
   font-size: 1.5em;
+  font-weight: bold;
   text-align: center;
   justify-content: center;
 }
@@ -240,7 +241,7 @@ h1 {
 .bean {
   height: 150px;
   width: 100%;
-  background-color: #d0d94d;
+  background-color: cadetblue;
   border-radius: 50%;
 }
 
@@ -268,7 +269,7 @@ h1 {
 
   .card {
     width: 95%;
-    border: 1px black solid;
+    border: 1px red solid;
     margin: 0 auto;
     display: flex;
     flex-direction: column;
@@ -278,13 +279,14 @@ h1 {
   .cell {
     width: 100%;
     height: 120px;
-    border: 1px black solid;
+    border: 1px red solid;
     text-align: center;
     margin: 0 auto;
     display: flex;
     align-items: center;
     align-content: center;
     font-size: 0.8em;
+    font-weight: bold;
     text-align: center;
     justify-content: center;
   }
